[package]
name = "hello-wasm"
version = "0.1.0"
authors = ["Flying Nobita <46126470+flyingnobita@users.noreply.github.com>"]
description = "A sample project with wasm-pack"
license = "MIT/Apache-2.0"
repository = "https://github.com/flyingnobita/hello-wasm"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
rayon = "1.5"
wasm-bindgen-rayon = "1.0"
